--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-:root {
-  --font-size-base: 16px;
-  --color-primary: #ffffff;
-  --color-bg: #000000;
-  --thin-border: solid 1px white;
-}
-
 *, *::before, *::after {
   box-sizing: border-box;
 }
